syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetUsersList (GetUsersListRequest) returns (GetUsersListResponse);
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse);
}

message CreateUserRequest {
  string firstName = 1;
  string lastName = 2;
  string company = 3;
  string email = 4;
  string password = 5;
}

message CreateUserResponse {
  string userId = 1;
  string error = 2;
}

message GetUserRequest {
  string userId = 1;
}

message GetUserResponse {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string company = 4;
  string email = 5;
  string error = 6;
}

message GetUsersListRequest {
  int32 offset = 1;
  int32 limit = 2;
}

message UserListItem {
  string userId = 1;
  string email = 2;
}

message GetUsersListResponse {
  repeated UserListItem users = 1;
  int32 total = 2;
  int32 offset = 3;
  int32 limit = 4;
  string error = 5;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  string token = 1;
  string error = 2;
}
